syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.amv.access.grpc.vehicle";
option java_outer_classname = "AccessVehicleProto";

package amv_access_api;

import "access_api_auth.proto";


service VehicleService {
  rpc createVehicle(CreateVehicleRequest) returns (CreateVehicleResponse) {}
}


message CreateVehicleRequest {
  IssuerAuth issuer_auth = 1;
  string name = 2;
  string description = 3;
  string public_key_base64 = 4;
}

message CreateVehicleResponse {
  string vehicle_serial_number = 1;
  string name = 2;
  string description = 3;
  string public_key_base64 = 4;
}